# ai_-_devices_interview

./: Dockerfile  README.md  pyproject.toml
src/: app.py  health.py  rag.py
src/core/: prompts.py  utils.py
