
[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nest-asyncio = ">=1.6.0,<2.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
streamlit = ">=1.28,<2.0"                         
transformers = ">=4.41,<5.0"
sentence-transformers = ">=2.3,<3.0"
qdrant-client = ">=1.7,<2.0"
llama-parse = ">=0.4,<1.0"

llama-index-core = ">=0.10,<0.20"
llama-index-embeddings-huggingface = ">=0.3,<0.20"
llama-index-llms-huggingface = ">=0.3,<0.20"
llama-index-llms-groq = ">=0.2,<0.20"
llama-index-vector-stores-qdrant = ">=0.2,<0.20"
llama-index-tools-duckduckgo = ">=0.1,<0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
